First pass at Deep Six excursion support - the parser and handler are literally just copy / pastes of deepblu cosmiq+ at this point

--- a/msvc/libdivecomputer.vcproj
+++ b/msvc/libdivecomputer.vcproj
@@ -529,6 +529,13 @@
 			<File
 				RelativePath="..\src\deepblu_parser.c"
 				>
+			<File
+				RelativePath="..\src\deepsix.c"
+				>
+			</File>
+			<File
+				RelativePath="..\src\deepsix_parser.c"
+				>
 			</File>
 			<File
 				RelativePath="..\src\mclean_extreme.c"
